# PyCerebralPlots

./: CODE_OF_CONDUCT.md  README.md  environment.yml  pyproject.toml  setup.py
PyCerebralPlots/: functions.py
PyCerebralPlots/static/: lh.hcp-mmp-b-fix.annot  references  rh.hcp-mmp-b-fix.annot  voxel2surfscript.py
PyCerebralPlots/static/JHU-ICBM-Surf/: 01_Middle_cerebellar_peduncle.srf  02_Pontine_crossing_tract_a_part_of_MCP.srf  03_Genu_of_corpus_callosum.srf  04_Body_of_corpus_callosum.srf  05_Splenium_of_corpus_callosum.srf  06_Fornix_column_and_body_of_fornix.srf  07_Corticospinal_tract_R.srf  08_Corticospinal_tract_L.srf  09_Medial_lemniscus_R.srf  10_Medial_lemniscus_L.srf  11_Inferior_cerebellar_peduncle_R.srf  12_Inferior_cerebellar_peduncle_L.srf  13_Superior_cerebellar_peduncle_R.srf  14_Superior_cerebellar_peduncle_L.srf  15_Cerebral_peduncle_R.srf  16_Cerebral_peduncle_L.srf  17_Anterior_limb_of_internal_capsule_R.srf  18_Anterior_limb_of_internal_capsule_L.srf  19_Posterior_limb_of_internal_capsule_R.srf  20_Posterior_limb_of_internal_capsule_L.srf  21_Retrolenticular_part_of_internal_capsule_R.srf  22_Retrolenticular_part_of_internal_capsule_L.srf  23_Anterior_corona_radiata_R.srf  24_Anterior_corona_radiata_L.srf  25_Superior_corona_radiata_R.srf  26_Superior_corona_radiata_L.srf  27_Posterior_corona_radiata_R.srf  28_Posterior_corona_radiata_L.srf  29_Posterior_thalamic_radiation_include_optic_radiation_R.srf  30_Posterior_thalamic_radiation_include_optic_radiation_L.srf  33_External_capsule_R.srf  34_External_capsule_L.srf  (+16 more)
(+16 files in other folders)
